--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install",
-    "export": "next export"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@fontsource/jost": "^4.5.13",
