--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/jost": "^4.5.13",
     "@fontsource/sen": "^4.5.9",
     "@types/node": "^17.0.45",
+    "@vercel/analytics": "^1.1.0",
     "axios": "^0.26.1",
     "next": "12.1.5",
     "next-seo": "^4.29.0",
