--- a/.github/workflows/FUNDING.yml
+++ b/.github/workflows/FUNDING.yml
@@ -3,10 +3,10 @@
 github: lrmn7
 patreon: # Replace with a single Patreon username
 open_collective: # Replace with a single Open Collective username
-ko_fi: lrmn7
+ko_fi: # Replace with a single Ko-fi username
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
 community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
-custom: ['https://www.buymeacoffee.com/LRMN']
+custom: ['https://lrmn.is-a.dev/sponsor/']
