--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lrmn",
+  "name": "lrmn-personal-bio",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -39,5 +39,5 @@
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4"
   },
-  "version": "0.2.13"
+  "version": "2.0.0"
 }
