--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@types/node": "^17.0.45",
     "@vercel/analytics": "^1.1.0",
     "axios": "^0.26.1",
-    "next": "12.1.5",
+    "next": "^14.2.3",
     "next-seo": "^4.29.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-tippy": "^1.4.0",
     "sass": "^1.57.1",
     "swr": "^1.3.0"
