--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -54,13 +54,13 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
 
       - name: Install Next.js
-        run: npm install next
+        run: ${{ steps.detect-package-manager.outputs.manager }} add next
 
       - name: Setup Pages
         uses: actions/configure-pages@v2
         with:
           static_site_generator: next
-          publish_dir: out # Update the publish directory to match the output directory
+          enablement: true
 
       - name: Restore cache
         uses: actions/cache@v2
