Remove "prepare" script and extra comma in package.json

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install"
+    "lint": "next lint"
   },
   "dependencies": {
     "@fontsource/jost": "^4.5.13",
