--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "personal-bio",
+  "name": "lrmn-personal-bio",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@fontsource/jost": "^4.5.13",
@@ -22,10 +23,15 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.3.0",
+    "@commitlint/config-conventional": "^16.2.4",
     "@types/react": "^17.0.52",
     "autoprefixer": "^10.4.13",
+    "commitlint": "^16.3.0",
+    "commitlint-config-gitmoji": "^2.2.10",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "husky": "^7.0.4",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.1.13",
@@ -33,5 +39,5 @@
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4"
   },
-  "version": "3.0.0"
+  "version": "2.0.0"
 }
