--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4"
   },
-  "version": "2.0.0"
+  "version": "2.0.0",
+  "engines": {
+    "node": ">= 18"
+  }
 }
